Initial client theme stylings

--- a/src/sass/page-template-fonts.scss
+++ b/src/sass/page-template-fonts.scss
@@ -21,3 +21,69 @@
 // 	font-style: normal;
 // 	font-display: swap
 // }
+
+// @font-face {
+// font-family: "Mafra";
+// src: url("https://www.catholicextension.org/wp-content/themes/ce/client/build/fonts/Mafra/Mafra-Medium.otf") format("opentype");
+// font-display: swap
+// }
+
+// @font-face {
+// font-family: "Mafra Light";
+// src: url("https://www.catholicextension.org/wp-content/themes/ce/client/build/fonts/Mafra/Mafra-Light.otf") format("opentype");
+// font-display: swap
+// }
+
+// @font-face {
+// font-family: "Mafra Bold";
+// src: url("https://www.catholicextension.org/wp-content/themes/ce/client/build/fonts/Mafra/Mafra-Bold.otf") format("opentype");
+// font-display: swap
+// }
+
+@font-face {
+font-family: "Mafra Black";
+src: url("https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10026/Mafra-Black.otf") format("opentype");
+font-display: swap
+}
+
+@font-face {
+font-family: "Mafra Book";
+src: url("https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10026/Mafra-Book.otf") format("opentype");
+font-display: swap
+}
+
+// @font-face {
+// font-family: "Mafra Book Italic";
+// src: url("https://www.catholicextension.org/wp-content/themes/ce/client/build/fonts/Mafra/Mafra-BookItalic.otf") format("opentype");
+// font-display: swap
+// }
+
+@font-face {
+font-family: "LFT Etica";
+src: url("https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10026/LFT_Etica_Reg.otf?v=1626192758000") format("opentype");
+font-display: swap
+}
+
+// @font-face {
+// font-family: "LFT Etica Italic";
+// src: url("https://www.catholicextension.org/wp-content/themes/ce/client/build/fonts/LFT_Etica/LFT_Etica_Italic.otf") format("opentype");
+// font-display: swap
+// }
+
+// @font-face {
+// font-family: "LFT Etica SemiBold";
+// src: url("https://www.catholicextension.org/wp-content/themes/ce/client/build/fonts/LFT_Etica/LFT_Etica_Semibold.otf") format("opentype");
+// font-display: swap
+// }
+
+// @font-face {
+// font-family: "LFT Etica Bold";
+// src: url("https://www.catholicextension.org/wp-content/themes/ce/client/build/fonts/LFT_Etica/LFT_Etica_Bold.otf") format("opentype");
+// font-display: swap
+// }
+
+@font-face {
+font-family: "LFT Etica ExtraBold";
+src: url("https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10026/LFT_Etica_Extrabold.otf") format("opentype");
+font-display: swap
+}
