--- a/src/sass/page-template-variables.scss
+++ b/src/sass/page-template-variables.scss
@@ -1,24 +1,29 @@
 // The most broadly used CSS Custom Properties for quick theming.
 // Uncomment to use and reference engrid-scrips SASS files for more CSS Custom Properties.
+// Brand Guide: https://app.productive.io/2650-4site-interactive-studios-inc/task/1643868
 
 // All CSS Custom Properties should be scoped to the theme using CSS Data Attributes.
-[data-engrid-theme="organizational-name"]{
+[data-engrid-theme="catholicextension"]{
+    --color_primary: #b81d23;
+    --error__color: #ff0000;
+
+
     // TYPOGRAPHY DEFAULT
-    // --default_font-family: var(--native-fonts__sans-serif);
+    --default_font-family: "Mafra Book", serif;
     // --default_color: initial;
     // --default_font-size: var(--root_font-size);
     // --default_font-weight: initial;
     // --default_line-height: initial;
 
     // TYPOGRAPHY H1
-    // --h1_font-family: var(--default_font-family);
+    --h1_font-family: "Mafra Black", serif;
     // --h1_color: initial;
     // --h1_font-size: calc(var(--root_font-size) * var(--scale-up_160pct));
     // --h1_font-weight: initial;
     // --h1_line-height: initial;
         
     // TYPOGRAPHY P
-    // --p_font-family: var(--default_font-family);
+    --p_font-family: "LFT Etica", sans-serif;
     // --p_color: initial;
     // --p_font-size: var(--root_font-size);
     // --p_font-weight: initial;
@@ -34,16 +39,23 @@
     // --a_color_hover: var(--a_color);
     // --a_text-decoration_hover: initial;
 
+    // TYPOGRAPHY LABEL
+    --label-font-family: "LFT Etica", sans-serif;
+    // --label-color: initial;
+    // --label-font-size: var(--root_font-size);
+    --label-font-weight: bold;
+    // --label-line-height: initial;
+
     // TYPOGRAPHY INPUT
-    // --input_font-family: var(--default_font-family);
+    --input_font-family: "LFT Etica", sans-serif;
     // --input_color: #000000;
     // --input_font-size: var(--root_font-size);
     // --input_font-weight: initial;
     // --input_line-height: initial;
-    // --input_background-color: #fafafa;
+    --input_background-color: #ffffff;
     // --input_border-width: 1px;
     // --input_border-color: #dfdfe1;
-    // --input_border-radius: 6px;
+    --input_border-radius: 0px;
     // --input_placeholder-color: var(--color_light-gray);
     // --input_box-shadow: inset 0 2px 2px -1px rgba(74, 74, 104, 0.1);
         
@@ -55,26 +67,31 @@
     // --input_border-bottom-color_hover: var(--input_border-color_hover);
     // --input_box-shadow_hover: --input_box-shadow;
 
+    // TYPOGRAPHY CHECKBOX INPUT:CHECKED
+    --checkbox_color_checked: #ffffff;
+    --checkbox_background-color_checked: #000000;
+    --checkbox_border-color_checked: #000000;
+
     // TYPOGRAPHY BUTTON
-    // --button_font-family: var(--default_font-family);
+    --button_font-family: "LFT Etica ExtraBold", sans-serif;
     // --button_color: var(--color_white);
     // --button_font-size: var(--root_font-size);
     // --button_font-weight: initial;
     // --button_line-height: initial;
     // --button_background-color: #535b61;
     // --button_border-width: 1px;
-    // --button_border-color: var(--color_black);
-    // --button_border-radius: 6px;
+    --button_border-color: var(--button_background-color);
+    --button_border-radius: 0px;
 
     // TYPOGRAPHY BUTTON:HOVER
     // --button_color_hover: var(--button_color);
-    // --button_background-color_hover: var(--color_black);
+    --button_background-color_hover: #881512;
     // --button_border-color_hover: var(--button_background-color_hover);
 
     // TYPOGRAPHY BUTTON:SELECTED
     // --button_color_checked: var(--button_color_hover);
-    // --button_background-color_checked: var(--button_background-color_hover);
-    // --button_border-color_checked: var(--button_border-color_hover);
+    --button_background-color_checked: #000000;
+    --button_border-color_checked: var(--button_background-color_checked);
 
     // DONATION PAGE
     // --give-monthly-donation-amount-appended-label: "/mo";
