First round WIP, integrated with EN

--- a/src/sass/page-template-variables.scss
+++ b/src/sass/page-template-variables.scss
@@ -96,8 +96,8 @@
     --button_border-color_checked: var(--button_background-color_checked);
 
     // DONATION PAGE
-    // --give-monthly-donation-amount-appended-label: "/mo";
-    // --give-annual-donation-amount-appended-label: "/yr";  
+    --give-monthly-donation-amount-appended-label: "/mo";
+    --give-annual-donation-amount-appended-label: "/yr";  
     --recurring-frequency__button_count: 4;
     --radio-to-buttons__button_count:4;
     --donation-amount__button_count: 4;
