--- a/src/sass/page-template-styles.scss
+++ b/src/sass/page-template-styles.scss
@@ -1,40 +1,227 @@
-/* Add your custom theme styles here */
+// The most broadly used CSS Custom Properties for quick theming.
+// Uncomment to use and reference engrid-scrips SASS files for more CSS Custom Properties.
+// Brand Guide: https://app.productive.io/2650-4site-interactive-studios-inc/task/1643868
 
+// All CSS Custom Properties should be scoped to the theme using CSS Data Attributes.
+[data-engrid-theme="catholicextension"]{
+    --color_primary: #b81d23;
+    --error__color: #ff0000;
+
+    // TYPOGRAPHY DEFAULT
+    --default_font-family: "LFT Etica", sans-serif;
+    // --default_color: initial;
+    // --default_font-size: var(--root_font-size);
+    // --default_font-weight: initial;
+    // --default_line-height: initial;
+
+    // TYPOGRAPHY H1
+    --h1_font-family: "Mafra Black", serif;
+    // --h1_color: initial;
+    // --h1_font-size: calc(var(--root_font-size) * var(--scale-up_160pct));
+    // --h1_font-weight: initial;
+    --h1_line-height: 1.3;
+
+    // TYPOGRAPHY OTHER H   
+    --h2_line-height: 1.3;
+        
+    // TYPOGRAPHY P
+    --p_font-family: "LFT Etica", sans-serif;
+    // --p_color: initial;
+    // --p_font-size: var(--root_font-size);
+    // --p_font-weight: initial;
+    // --p_line-height: initial;
+
+    // TYPOGRAPHY A
+    // --a_font-family: var(--default_font-family);
+    // --a_color: initial;
+    // --a_text-decoration: underline;
+
+    // TYPOGRAPHY A:FOCUS
+    // TYPOGRAPHY A:HOVER
+    // --a_color_hover: var(--a_color);
+    // --a_text-decoration_hover: initial;
+
+    // TYPOGRAPHY LABEL
+    --label-font-family: "LFT Etica", sans-serif;
+    // --label-color: initial;
+    --label-font-size: .8em;
+    --label-font-weight: regular;
+    // --label-line-height: initial;
+
+    // TYPOGRAPHY INPUT
+    --input_font-family: "LFT Etica", sans-serif;
+    // --input_color: #000000;
+    // --input_font-size: var(--root_font-size);
+    // --input_font-weight: initial;
+    // --input_line-height: initial;
+    --input_background-color: #ffffff;
+    // --input_border-width: 1px;
+    --input_border-color: hsl(0deg 0% 42%);
+    --input_border-radius: 0px;
+    // --input_placeholder-color: var(--color_light-gray);
+    // --input_box-shadow: inset 0 2px 2px -1px rgba(74, 74, 104, 0.1);
+        
+    // TYPOGRAPHY INPUT:FOCUS
+    // TYPOGRAPHY INPUT:HOVER
+    // --input_color_hover: var(--input_color);
+    // --input_background-color_hover: var(--input_background-color);
+    // --input_border-color_hover: #767677;
+    // --input_border-bottom-color_hover: var(--input_border-color_hover);
+    // --input_box-shadow_hover: --input_box-shadow;
+
+    // TYPOGRAPHY CHECKBOX INPUT:CHECKED
+    --checkbox_color_checked: #ffffff;
+    --checkbox_background-color_checked:var(--color_primary);
+    // --checkbox_border-color_checked: #000000;
+
+    // TYPOGRAPHY BUTTON
+    --button_font-family: "LFT Etica", sans-serif;
+    --button_color: hsl(0deg 0% 22%);
+    // --button_font-size: var(--root_font-size);
+    --button_font-weight: 900;
+    // --button_line-height: initial;
+    --button_background-color: #ffffff;
+    --button_border-width: 1px;
+    --button_border-color: var(--button_color);
+    --button_border-radius: 0px;
+    --button_padding: 1.2ch 1.2ch;
+
+    // TYPOGRAPHY BUTTON:HOVER
+    --button_color_hover: #ffffff;
+    --button_background-color_hover: #881512;
+    // --button_border-color_hover: var(--button_background-color_hover);
+
+    // TYPOGRAPHY BUTTON:SELECTED
+    // --button_color_checked: var(--button_color_hover);
+    // --button_background-color_checked: #000000;
+    // --button_border-color_checked: var(--button_background-color_checked);
+
+    // --button_background-color_checked:
+    // --button_border-color_checked: 
+
+    // DONATION PAGE
+    --give-monthly-donation-amount-appended-label: "/mo";
+    --give-annual-donation-amount-appended-label: "/yr";  
+    --recurring-frequency__button_count: 3;
+    --radio-to-buttons__button_count:3;
+    --donation-amount__button_count: 3;
+    --radio_box-shadow_selected:#b81d23 0px 0px 0px 6px inset;
+    // --fields_spacing-block:0;
+    // --give-by-select__button_count: 4;
+
+    // --recurring-frequency__button_font-weight: 900;
+    // --donation-amount__button_font-weight: 900;
+    // --give-by-select__button_font-weight: 900;
+    // --submit__button_font-weight: 900;
+
+    --submit__button_border-color: #881512;
+    --submit__button_background-color: #881512;
+    --submit__button_color: #ffffff;
+    --submit__button_border-color_hover: #881512;
+    --submit__button_background-color_hover: #881512;
+    --submit__button_color_hover: #ffffff;
+    --submit__button_padding-top: 2ch;
+    --submit__button_padding-bottom: 2ch;
+
+    --engrid__body_background-color: #f3f0ed;
+}
+
+/* Add your custom theme styles here */
 [data-engrid-theme="catholicextension"]{
 
+    &#en__pagebuilder {
+        .page-alert,
+        .content-header,
+        .body-headerOutside,
+        .body-bannerOverlay,
+        .body-side,
+        .body-bottom,
+        .body-footerOutside,
+        .body-footer,
+        .content-footerSpacer,
+        .content-preFooter,
+        .content-footer,
+        .page-backgroundImageOverlay {
+          // display: none;
+          position: absolute;
+          width: 1px;
+          height: 1px;
+          margin: -1px;
+          border: 0;
+          padding: 0;
+          white-space: nowrap;
+          -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+          clip: rect(0 0 0 0);
+          overflow: hidden;
+        }
+    }
+
+    .body-header{
+        padding-top: 30px;
+    }
+
     // Hide unused sections
-    .page-alert, .body-bannerOverlay {
-        display:none;
+    // .page-alert, .body-bannerOverlay {
+    //     display:none;
+    // }
+
+    &[data-engrid-layout="centerleft1col"],
+    &[data-engrid-layout="centercenter1col"],
+    &[data-engrid-layout="centerright1col"] {
+        @media screen and (min-width: $one_col_content-column_min-width) {
+            .body-header {
+                margin-top: 80px;
+            }
+
+            .body-footer {
+                margin-bottom: 80px;
+            }
+        }
+
+        @media screen and (max-width: $one_col_content-column_min-width) {
+            --engrid__body_padding: 0px 1.25rem;
+        }
+    }
+
+    &[data-engrid-layout="centercenter2col"] {
+        @media screen and (min-width: $two_col_content-column_min-width) {
+            .body-header {
+                margin-top: 80px;
+            }
+        
+            .body-footer {
+                margin-bottom: 80px;
+            }
+        }
+
+        @media screen and (max-width: $two_col_content-column_min-width) {
+            --engrid__body_padding: 0px 1.25rem;
+        }
     }
 
 
-    .body-header {
-        margin-top:1.5rem;
-    }
 
-    .body-footer {
-        margin-bottom:1.5rem;
-    }
 
-    button,
-    .button,
-    .en__tweetButton a,
-    .radio-to-buttons .en__field--radio input[type=radio]+label,
-    .en__field--give-by-select.en__field--radio input[type=radio]+label,
-    .radio-to-buttons_donationAmt .en__field--donationAmt.en__field--radio input[type=radio]+label,
-    .radio-to-buttons_recurrfreq .en__field--recurrfreq.en__field--radio input[type=radio]+label{
-        text-transform: uppercase;
-    }
+    // button,
+    // .button,
+    // .en__tweetButton a,
+    // .radio-to-buttons .en__field--radio input[type=radio]+label,
+    // .en__field--give-by-select.en__field--radio input[type=radio]+label,
+    // .radio-to-buttons_donationAmt .en__field--donationAmt.en__field--radio input[type=radio]+label,
+    // .radio-to-buttons_recurrfreq .en__field--recurrfreq.en__field--radio input[type=radio]+label{
+    //     text-transform: uppercase;
+    // }
 
-    .en__field__error{
-        font-family: var(--p_font-family);
-    }
+    // .en__field__error{
+    //     font-family: var(--p_font-family);
+    // }
 
-    .radio-to-buttons .en__field--radio input[type=radio]+label {
-        white-space:nowrap;
-    }
+    // .radio-to-buttons .en__field--radio input[type=radio]+label {
+    //     white-space:nowrap;
+    // }
 
-    label>a {
-        font-family:var(--label-font-family);
-    }
+    // label>a {
+    //     font-family:var(--label-font-family);
+    // }
 }
