--- a/src/sass/page-template-variables.scss
+++ b/src/sass/page-template-variables.scss
@@ -1,107 +1,2 @@
-// The most broadly used CSS Custom Properties for quick theming.
-// Uncomment to use and reference engrid-scrips SASS files for more CSS Custom Properties.
-// Brand Guide: https://app.productive.io/2650-4site-interactive-studios-inc/task/1643868
-
-// All CSS Custom Properties should be scoped to the theme using CSS Data Attributes.
-[data-engrid-theme="catholicextension"]{
-    --color_primary: #b81d23;
-    --error__color: #ff0000;
-
-    // TYPOGRAPHY DEFAULT
-    --default_font-family: "LFT Etica", sans-serif;
-    // --default_color: initial;
-    // --default_font-size: var(--root_font-size);
-    // --default_font-weight: initial;
-    // --default_line-height: initial;
-
-    // TYPOGRAPHY H1
-    --h1_font-family: "Mafra Black", serif;
-    // --h1_color: initial;
-    // --h1_font-size: calc(var(--root_font-size) * var(--scale-up_160pct));
-    // --h1_font-weight: initial;
-    --h1_line-height: 1.3;
-
-    // TYPOGRAPHY OTHER H   
-    --h2_line-height: 1.3;
-        
-    // TYPOGRAPHY P
-    --p_font-family: "LFT Etica", sans-serif;
-    // --p_color: initial;
-    // --p_font-size: var(--root_font-size);
-    // --p_font-weight: initial;
-    // --p_line-height: initial;
-
-    // TYPOGRAPHY A
-    // --a_font-family: var(--default_font-family);
-    // --a_color: initial;
-    // --a_text-decoration: underline;
-
-    // TYPOGRAPHY A:FOCUS
-    // TYPOGRAPHY A:HOVER
-    // --a_color_hover: var(--a_color);
-    // --a_text-decoration_hover: initial;
-
-    // TYPOGRAPHY LABEL
-    --label-font-family: "LFT Etica", sans-serif;
-    // --label-color: initial;
-    --label-font-size: .8em;
-    --label-font-weight: regular;
-    // --label-line-height: initial;
-
-    // TYPOGRAPHY INPUT
-    --input_font-family: "LFT Etica", sans-serif;
-    // --input_color: #000000;
-    // --input_font-size: var(--root_font-size);
-    // --input_font-weight: initial;
-    // --input_line-height: initial;
-    --input_background-color: #ffffff;
-    // --input_border-width: 1px;
-    // --input_border-color: #dfdfe1;
-    --input_border-radius: 0px;
-    // --input_placeholder-color: var(--color_light-gray);
-    // --input_box-shadow: inset 0 2px 2px -1px rgba(74, 74, 104, 0.1);
-        
-    // TYPOGRAPHY INPUT:FOCUS
-    // TYPOGRAPHY INPUT:HOVER
-    // --input_color_hover: var(--input_color);
-    // --input_background-color_hover: var(--input_background-color);
-    // --input_border-color_hover: #767677;
-    // --input_border-bottom-color_hover: var(--input_border-color_hover);
-    // --input_box-shadow_hover: --input_box-shadow;
-
-    // TYPOGRAPHY CHECKBOX INPUT:CHECKED
-    --checkbox_color_checked: #ffffff;
-    --checkbox_background-color_checked:var(--color_primary);
-    // --checkbox_border-color_checked: #000000;
-
-    // TYPOGRAPHY BUTTON
-    --button_font-family: "LFT Etica ExtraBold", sans-serif;
-    // --button_color: var(--color_white);
-    // --button_font-size: var(--root_font-size);
-    // --button_font-weight: initial;
-    // --button_line-height: initial;
-    // --button_background-color: #535b61;
-    // --button_border-width: 1px;
-    --button_border-color: var(--button_background-color);
-    --button_border-radius: 0px;
-
-    // TYPOGRAPHY BUTTON:HOVER
-    // --button_color_hover: var(--button_color);
-    --button_background-color_hover: #881512;
-    // --button_border-color_hover: var(--button_background-color_hover);
-
-    // TYPOGRAPHY BUTTON:SELECTED
-    // --button_color_checked: var(--button_color_hover);
-    --button_background-color_checked: #000000;
-    --button_border-color_checked: var(--button_background-color_checked);
-
-    // DONATION PAGE
-    --give-monthly-donation-amount-appended-label: "/mo";
-    --give-annual-donation-amount-appended-label: "/yr";  
-    --recurring-frequency__button_count: 4;
-    --radio-to-buttons__button_count:4;
-    --donation-amount__button_count: 3;
-    --radio_box-shadow_selected:#b81d23 0px 0px 0px 6px inset;
-    // --fields_spacing-block:0;
-    // --give-by-select__button_count: 4;
-}
+$one_col_content-column_max-width: 1024px;
+$one_col_content-column_min-width: 768px;
