--- a/src/templates/page-brand-guide.html
+++ b/src/templates/page-brand-guide.html
@@ -17,9 +17,10 @@
   </head>
   <body
     data-engrid-layout="centercenter1col"
-    data-engrid-theme="catholicextension"
+    data-engrid-theme="engrid"
     data-engrid-add-input-placeholders
     data-engrid-embedded
+    data-engrid-debug
   >
     <include
       src="src/templates/includes/page-wrapper-elements/body.html"
