--- a/src/templates/includes/page-contents/page-contents-donation.html
+++ b/src/templates/includes/page-contents/page-contents-donation.html
@@ -25,7 +25,6 @@
     <div
       class="en__component en__component en__component--column en__component--advcolumn body-header"
     >
-      <!--
       <div class="en__component en__component--codeblock">
         <p>
           <a href="#" target="_blank">
@@ -38,7 +37,6 @@
           </a>
         </p>
       </div>
-      
       <div
         class="en__component en__component--copyblock have-questions-call-line"
       >
@@ -46,16 +44,13 @@
 
         <p><a href="tel:1-800-000-0000">800-000-0000</a></p>
       </div>
-      -->
     </div>
     <div
       class="en__component en__component en__component--column en__component--advcolumn body-title"
     >
-      <!--
       <div class="en__component en__component--copyblock">
         <h1>ENGRID Local Development</h1>
       </div>
-      -->
     </div>
     <div
       class="en__component en__component en__component--column en__component--advcolumn body-banner"
@@ -64,24 +59,38 @@
       class="en__component en__component en__component--column en__component--advcolumn body-bannerOverlay"
     >
       <div class="en__component en__component--copyblock banner-text blue lead">
-        <p>&nbsp;</p>
+        <p>Donate Today</p>
       </div>
     </div>
     <div
       class="en__component en__component en__component--column en__component--advcolumn body-top"
     >
       <div class="en__component en__component--copyblock">
-
-        <img src="https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10026/CE+logo+large+RGB+copy+bigger.png?v=1519247744000" style="padding:40px 60px 20px 60px;">
-
         <h2 style="text-align: center;">
-          Poor communities of faith need your help–now more than ever.
+          <span style="color:#039BC4;"
+            ><span style="font-size:26px;"
+              ><strong>Donate Today to Starter Theme</strong></span
+            ></span
+          >
         </h2>
 
-        <p style="text-align: left;">
-          Thank you for helping to build up transformative Catholic faith communities in America's poorest regions.
+        <h2 style="text-align: center;">
+          Your Gift Today Can Help Save Our Ocean and its Wildilfe!
+        </h2>
+
+        <p style="text-align: center;">
+          Our ocean unifies our world like nothing else. And saving it from
+          ongoing threats is a cause that affects us all. We are on the front
+          lines of ocean protection, investing in research, leadership and
+          advocacy that advances science-based solutions that work.
         </p>
 
+        <p style="text-align: center;">
+          <strong
+            >Give today and make a difference for the future of our
+            ocean!</strong
+          >
+        </p>
       </div>
     </div>
     <div
@@ -114,7 +123,7 @@
               <label
                 for="en__field_transaction_recurrfreq0"
                 class="en__field__label en__field__label--item"
-                >Once</label
+                >Give Once</label
               >
             </div>
             <div class="en__field__item">
@@ -128,7 +137,7 @@
               <label
                 for="en__field_transaction_recurrfreq1"
                 class="en__field__label en__field__label--item"
-                >Monthly</label
+                >Give Monthly</label
               >
             </div>
             <div class="en__field__item">
@@ -142,7 +151,7 @@
               <label
                 for="en__field_transaction_recurrfreq2"
                 class="en__field__label en__field__label--item"
-                >Annually</label
+                >Give Annually</label
               >
             </div>
           </div>
@@ -276,7 +285,7 @@
       <div class="en__component en__component--copyblock form-section-header">
         <h2 id="personal-information-section-header">Personal Information</h2>
       </div>
-      <div class="en__component en__component--formblock i1-50 i2-50 i4-100 i5-66 i6-33">
+      <div class="en__component en__component--formblock i4-100">
         <div
           class="en__field en__field--text en__field--741988 en__field--firstName en__mandatory"
         >
@@ -358,7 +367,7 @@
         />
       </div>
       <div
-        class="en__component en__component--formblock i2-66 i3-33 i5-50 i6-50 simple_country_select"
+        class="en__component en__component--formblock i2-50 i2-start i3-50 i3-end simple_country_select"
       >
         <div
           class="en__field en__field--select en__field--755070 en__field--country en__mandatory"
@@ -785,7 +794,8 @@
               <label
                 for="en__field_supporter_questions_178688"
                 class="en__field__label en__field__label--item"
-                >Get updates and stories from Catholic Extension</label
+                >Yes, I would like to receive periodic SMS messages from Ocean
+                Conservancy.</label
               >
             </div>
           </div>
@@ -810,7 +820,8 @@
               <label
                 for="en__field_supporter_questions_20087"
                 class="en__field__label en__field__label--item"
-                >Get updates and stories from Catholic Extension</label
+                >Yes, I would like to receive occasional emails from Ocean
+                Conservancy.</label
               >
             </div>
           </div>
@@ -1085,7 +1096,7 @@
                 class="en__field__label en__field__label--item"
                 for="en__field_supporter_processing_fees"
                 >I&rsquo;d like to cover all transaction fees so that 100% of my
-                donation goes to Catholic Extension!</label
+                donation goes to Starter Theme!</label
               >
             </div>
           </div>
@@ -1153,7 +1164,7 @@
         <h2>Give In Honor / In Memoriam</h2>
       </div>
       <div
-        class="en__component en__component--formblock inmem-Y i3-100 i4-start i4-50 i5-end i5-50 i7-50 i8-50 i9-100"
+        class="en__component en__component--formblock inmem-Y i3-100 i4-start i4-50 i5-end i5-50 i9-100"
       >
         <div
           class="en__field en__field--text en__field--742962 en__field--honname"
@@ -1357,10 +1368,34 @@
       class="en__component en__component en__component--column en__component--advcolumn body-bottom"
     >
       <div class="en__component en__component--codeblock">
+        <div style="text-align: center;">
+          <img
+            alt=""
+            class="oc-bbb-logo"
+            data-ratio-lock="true"
+            data-unit="px"
+            data-src="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1991/oc-bbb-vector.png?v=1590094215000"
+            style="height: 50px; width: 132px;"
+          />&nbsp;&nbsp;<img
+            alt=""
+            class="oc-cna-logo"
+            data-ratio-lock="true"
+            data-unit="px"
+            data-src="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1991/4StarSquare.jpg?v=1590094215000"
+            style="height: 50px; width: 50px;"
+          />&nbsp;&nbsp;<img
+            alt=""
+            class="oc-gs-logo"
+            data-ratio-lock="true"
+            data-unit="px"
+            data-src="https://aaf1a18515da0e792f78-c27fdabe952dfc357fe25ebf5c8897ee.ssl.cf5.rackcdn.com/1991/GuideStarSeals_gold_MED.png?v=1590094215000"
+            style="height: 50px; width: 50px;"
+          />
+        </div>
+
         <p style="text-align: center;">
-          Catholic Extension is a registered 501(c)(3).
-All donations are tax deductible in full or in part.
-© Copyright 2021 Catholic Extension.
+          Starter Theme is a 501(c)3 - Donations are 100% tax-deductible as
+          allowed by law.
         </p>
       </div>
     </div>
@@ -1380,26 +1415,37 @@ All donations are tax deductible in full or in part.
       class="en__component en__component en__component--column en__component--advcolumn content-footer pseudo-subgrid"
     >
       <div class="en__component en__component--copyblock">
-        <p style="text-align: center;">&nbsp;
+        <p style="text-align: center;">
+          1300 19th Street NW - 8th Floor - Washington, DC 20036<br />
+          <strong>webmaster@oceanconservancy.org</strong><br />
+          800-000-0000 -
+          <a href="./privacy-policy" target="_blank"
+            ><strong>Privacy Policy</strong></a
+          >
+          -
+          <strong
+            ><a href="./legal-statement/">Legal Information</a>&nbsp;</strong
+          ><span style="text-align: center;"
+            >-
+            <a href="./cookie-policy/" target="_blank"
+              ><b>Cookie Policy</b></a
+            ></span
+          >
         </p>
       </div>
       <div class="en__component en__component--copyblock">
-        <!--
         <p>
           <span style="font-size: 13px;"
             >Photo Credit: Photographer (Foreground) Photographer
             (Background)</span
           >
         </p>
-        -->
       </div>
       <div class="en__component en__component--copyblock">
-        <!--
-          <p>&copy; 2021&nbsp;{{theme}}</p>
-        -->
+        <p>&copy; 2021&nbsp;{{theme}}</p>
       </div>
       <div class="en__component en__component--copyblock">
-        <!--
+        <!-- Thank you for supporting 4Site Studios -->
         <div class="light-font" id="designed-by-4site">
           <a
             href="https://www.4sitestudios.com/engaging-networks"
@@ -1410,21 +1456,18 @@ All donations are tax deductible in full or in part.
             ><span class="text-fade"> by 4Site Studios</span></a
           >
         </div>
-        -->
       </div>
-      
     </div>
     <div
       class="en__component en__component en__component--column en__component--advcolumn page-backgroundImage pseudo-subgrid"
     >
       <div class="en__component en__component--codeblock">
-        <!--
-          <video
+        <video
           poster="https://i.picsum.photos/id/1041/5184/2916.jpg?hmac=TW_9o6HeD7H7I7NVo-S1Fa1iAvzQ10uvmJqsXvNoi0M"
         >
-        -->
-          <img src="https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10026/2021+CE+Default+Background.jpg?v=1619021159000"
-            type="image/jpg"
+          <source
+            data-src="https://ak.picdn.net/shutterstock/videos/1065808690/preview/stock-footage-drone-footage-on-one-of-many-roundabouts-in-shah-alam-shot-on-hyperlapse-mode-fps-and.mp4"
+            type="video/mp4"
           />
         </video>
       </div>
