--- a/src/templates/page-donation.html
+++ b/src/templates/page-donation.html
@@ -10,8 +10,8 @@
     ></include>
   </head>
   <body
-    data-engrid-layout="centerleft1col"
-    data-engrid-theme="catholicextension"
+    data-engrid-layout="centercenter1col"
+    data-engrid-theme="engrid"
     data-engrid-add-input-placeholders
     data-engrid-errors="fancy"
   >
