--- a/src/sass/page-template-styles.scss
+++ b/src/sass/page-template-styles.scss
@@ -127,6 +127,7 @@
     --submit__button_padding-bottom: 2ch;
     --submit__button_text-transform: uppercase;
 
+    --engrid__page_background-color: #f3f0ed;
     --engrid__body_background-color: #f3f0ed;
 }
 
