--- a/src/sass/page-template-styles.scss
+++ b/src/sass/page-template-styles.scss
@@ -174,6 +174,41 @@
     //     display:none;
     // }
 
+    // Adds some spacing around the edge of the body REF: https://d.pr/i/utUrCG
+    @media screen and (min-width:768px){
+        &[data-engrid-layout=leftleft1col] #engrid > .en__component--advrow,
+        &[data-engrid-layout=leftleft1col] form > .en__component--advrow{
+            grid-template-columns: [pc-start lpc-start] minmax(2rem, 0) [lpc-end cc-start lcc-start] minmax(0, 0) [lcc-end bc-start lbc-start] minmax(250px, 250px) [lbc-end rbc-start] minmax(250px, 250px) [rbc-end bc-end rcc-start] minmax(0, 0) [rcc-end cc-end rpc-start] minmax(0, 1fr) [rpc-end pc-end];
+        
+            .body-header{
+                --engrid__body-header_margin: 2rem 0 0 0;
+            }
+
+            .body-footer{
+                --engrid__body-footer_margin: 0 0 2rem 0;
+            }
+        }
+
+        &[data-engrid-layout=rightright1col] #engrid > .en__component--advrow,
+        &[data-engrid-layout=rightright1col] form > .en__component--advrow{
+            grid-template-columns: [pc-start lpc-start] minmax(0, 1fr) [lpc-end cc-start lcc-start] minmax(0, 0) [lcc-end bc-start lbc-start] minmax(250px, 250px) [lbc-end rbc-start] minmax(250px, 250px) [rbc-end bc-end rcc-start] minmax(0, 0) [rcc-end cc-end rpc-start] minmax(0, 2rem) [rpc-end pc-end];
+        
+            .body-header{
+                --engrid__body-header_margin: 2rem 0 0 0;
+            }
+
+            .body-footer{
+                --engrid__body-footer_margin: 0 0 2rem 0;
+            }
+        }
+    }
+
+    // Lets the buttons fill their row on mobile REF: https://d.pr/i/cuztvV
+    @media screen and (max-width: $one_col_content-column_min-width - 1px) {
+        --recurring-frequency__flex-grow: 1;
+        --give-by-select__flex-grow: 1;
+    }
+
     &[data-engrid-layout="centerleft1col"],
     &[data-engrid-layout="centercenter1col"],
     &[data-engrid-layout="centerright1col"] {
