Added padding around the body-banner image area to match padding used on the rest of the body
Client request

--- a/src/sass/page-template-styles.scss
+++ b/src/sass/page-template-styles.scss
@@ -129,6 +129,8 @@
 
     --engrid__page_background-color: #f3f0ed;
     --engrid__body_background-color: #f3f0ed;
+
+    --engrid__body-banner_padding: var(--engrid__body-main_padding);
 }
 
 /* Add your custom theme styles here */
